GetSongBPM 링크 추가

--- a/templates/index.html
+++ b/templates/index.html
@@ -87,5 +87,10 @@
             });
         });
     </script>
+   
+    <footer>
+      <p>Powered by <a href="https://getsongbpm.com">GetSongBPM</a></p>
+    </footer>
+    
 </body>
 </html>
