--- a/music_recommendation_app/templates/recommend_result_page.html
+++ b/music_recommendation_app/templates/recommend_result_page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>음악 추천 결과 | 음잘따끈센</title>
+  <title>음악 추천 결과 | 음잘딱깔센</title>
   <style>
     body {
       margin: 0;
