--- a/music_genre_app/templates/genre_loading_page.html
+++ b/music_genre_app/templates/genre_loading_page.html
@@ -97,7 +97,7 @@
 <body>
   <header>
     <a href="/" class="logo-link">
-      <img src="{{ url_for('static', filename='logo.jpg') }}" alt="로고" class="logo-image" onerror="this.src='https://placehold.co/50x50/cccccc/000000?text=Logo'; this.alt='로고 (이미지 없음)';" />
+      <img src="{{ url_for('static', filename='logo.png') }}" alt="로고" class="logo-image" onerror="this.src='https://placehold.co/50x50/cccccc/000000?text=Logo'; this.alt='로고 (이미지 없음)';" />
     </a>
   </header>
 
